--- a/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
@@ -47,7 +47,7 @@
     "#### The dot\n",
     "Something after the dot belong to something before the dot<br>\n",
     "ex. numpy.sqrt()<br>\n",
-    "sqrt function came from the module of numpy, we can only use sqrt when mention numpy before it"
+    "sqrt function came from the module of numpy, we can only use sqrt when mention numpy before it."
    ]
   },
   {
