READY FOR REVIEW using_jupyter_need correction

--- a/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
+++ b/1.2_using_jupyter_,_exercises/using_jupyter_(need),_exercises.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "![](https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Polynomialdeg2.svg/450px-Polynomialdeg2.svg.png)\n",
     "\n",
-    "(Image from the Wikipedia page on [Quadratic equations](https://en.wikipedia.org/wiki/Quadratic_equation))\n",
+    "(Image from the <u>[Wikipedia page on Quadratic equations](https://en.wikipedia.org/wiki/Quadratic_equation)</u>)<br>\n",
     "The general form of a quadratic equation is:\n",
     "$$ax^2+bx+c=0$$\n"
    ]
@@ -53,7 +53,7 @@
    "id": "92f7932b-d710-4631-a3ab-dbd337672274",
    "metadata": {},
    "source": [
-    "Provided $a\\ne0$ we can use an elementary algebraic method called [completing the square](https://en.wikipedia.org/wiki/Completing_the_square) to show that a quadratic equation has the following solution:\n",
+    "Provided $a\\ne0$ we can use an elementary algebraic method called <u>[completing the square](https://en.wikipedia.org/wiki/Completing_the_square)</u> to show that a quadratic equation has the following solution:\n",
     "\n",
     "$$\n",
     "x=\\dfrac{-b\\pm\\sqrt{b^2-4ac}}{2a}\n",
@@ -74,13 +74,13 @@
    "id": "e7295be6-5835-4e8a-8e3f-75b35100a312",
    "metadata": {},
    "source": [
-    "The quantity $\\Delta = b^2-4ac$ is called the discriminant of the equation and decides the nature of its solutions. The table below shows the various possibilities.\n",
+    "The quantity $\\Delta = b^2-4ac$ is called the **discriminant** of the equation and decides the nature of its solutions. The table below shows the various possibilities.\n",
     "\n",
     "|Discriminant|Roots|\n",
     "|:---|:---|\n",
     "|$\\Delta=b^2-4ac=0$|A single solution of $-b/(2a)$|\n",
-    "|$\\Delta=b^2-4ac=0$|Two distinct solutions|\n",
-    "|$\\Delta=b^2-4ac=0$|No real solutions; both are complex.|"
+    "|$\\Delta=b^2-4ac>0$|Two distinct solutions|\n",
+    "|$\\Delta=b^2-4ac<0$|No real solutions; both are complex.|"
    ]
   },
   {
@@ -123,14 +123,14 @@
     "\n",
     "\n",
     "$$\n",
-    "\\mu= \\frac{1}{n}\\sum_{i=n}^{n} x_i \\\\\n",
+    "\\mu= \\frac{1}{n}\\sum_{i=1}^{n} x_i \\\\\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\sigma= \\sqrt{\\frac{1}{n}\\sum_{i=n}^{n} (x_i-\\mu)^2 \\\\}\n",
+    "\\sigma= \\sqrt{\\frac{1}{n}\\sum_{i=1}^{n} (x_i-\\mu)^2 \\\\}\n",
     "$$\n",
     "$$\n",
-    "r= \\frac{\\sum_{i=n}^{n} (x_i-\\mu_X) \\\\\\sum_{i=n}^{n} (y_i-\\mu_Y) \\\\}{\\sqrt{\\sum_{i=n}^{n} (x_i-\\mu_X)^2 \\\\\\sum_{i=n}^{n} (y_i-\\mu_Y)^2 \\\\}}\n",
+    "r= \\frac{\\sum_{i=1}^{n} (x_i-\\mu_X)(y_i-\\mu_Y) \\\\}{\\sqrt{\\sum_{i=1}^{n} (x_i-\\mu_X)^2 \\\\\\sum_{i=1}^{n} (y_i-\\mu_Y)^2 \\\\}}\n",
     "$$\n"
    ]
   }
