READY FOR REVIEW fundamental_good

--- a/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
@@ -11,6 +11,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8c22eb4a-2c5f-44c6-b8fd-39412290e491",
+   "metadata": {},
+   "source": [
+    "## Exercise 1 (Total recall?) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d49df827-621c-43f1-a983-d9cfed415d41",
    "metadata": {},
    "source": [
@@ -66,12 +74,124 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8690ec98-37fe-4c69-8020-a7c86dfa7892",
+   "cell_type": "markdown",
+   "id": "9c19486b-05e7-42e5-b276-369d1c0cb95a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Exercise 2 (Debug me)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "dc5d1141-7ef7-4509-86c2-12dedf288a35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4 4.69041575982343\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x, y = 3, 4\n",
+    "z = np.sqrt(x*2 + y**2)\n",
+    "print(x, y, z)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3aaa6a5d-8a37-4ae1-97b0-fb2439687041",
+   "metadata": {},
+   "source": [
+    "\n",
+    "|#|Term\t|Description|\n",
+    "|:---|:--:|:---|\n",
+    "|1|\tFunction|Funtion does specific task, usually require argument in the ( )| \n",
+    "|3| Comments|Comments is something ignore by python. They are there for human to understand |\n",
+    "|4|\tIndentations|They basically are spaces allow python to group the codes and understand which part is under which specific function|\n",
+    "|5|\tPackages|we can download packages to use function from it which are not provide by python| \n",
+    "|6|\t.\t|something after it belongs to something before it | \n",
+    "|7|\t:\t|used to signify the start of an indented code block|\n",
+    "|8|\t[ ]\t|can be used for list | \n",
+    "|9|\t[ [ ] , [ ] ]|can be used in 2D matrix |\t\n",
+    "|10|{ }|can be used for dictionary |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8acf6029-e83e-4cb9-b881-4f1b29a83369",
+   "metadata": {},
+   "source": [
+    "## Exercise 4 (More than one way to divide) ☻"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "101e248c-6b0f-4ac0-a5de-c7641497c656",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5/2  #devide which output is a float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "272b56d0-5816-462e-8a28-d93dab8d600f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5//2 #devide which output only keep the floor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "22ab4fcf-874b-4c73-b853-215c9f0dcbd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5%2 #output is the remainder"
+   ]
   }
  ],
  "metadata": {
