READY FOR REVIEW resolved_fundamental_need

--- a/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
@@ -22,10 +22,23 @@
    "id": "d49df827-621c-43f1-a983-d9cfed415d41",
    "metadata": {},
    "source": [
-    "#### Using funstion, brackets come after the function() \n",
+    "#### Function\n",
     "\n",
     "print('Hello World!!')<br>\n",
-    "output: Hello World!!"
+    "output: Hello World!!<br>\n",
+    "\n",
+    "*Parentheses, (), always follow a function.<br>\n",
+    "We use these parentheses to pass arguments to the function<br>\n",
+    "Parentheses are left empty for those functions that don’t require an argument (e.g. exit())*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78d237d1-d40c-48ba-a6c0-c4b783f1e57f",
+   "metadata": {},
+   "source": [
+    "#### Python is interpreted\n",
+    "*it works sequentially, one command at a time*"
    ]
   },
   {
@@ -34,7 +47,45 @@
    "metadata": {},
    "source": [
     "#### Comments\n",
-    "Everything after '#' will be a comment, python won't read it"
+    "Everything after '#' will be a comment,*to write additional information for people to read*, python won't read it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d67805a-7e66-4e2f-ac7b-3650b7e574af",
+   "metadata": {},
+   "source": [
+    "#### = is not the ame as ==\n",
+    "*= is used to set something equal*,assigning value<br>\n",
+    "*== is used to check if something is equal*,use as a condition or asking question"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8178d8b6-6834-4125-8eae-168635beae9f",
+   "metadata": {},
+   "source": [
+    "#### If statement\n",
+    "Used to test the condition, only if the condition is True, the subsequent block of code will only run<br>\n",
+    "*Notice the use of : and indentations (spaces or tabs) to define what to do if the answer is True and what to do if the answer is False*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33aa5c3f-a9e9-47d9-9ba4-6252c442f5e6",
+   "metadata": {},
+   "source": [
+    "#### The indentations (spaces) are important\n",
+    "x = 2<br>\n",
+    "\n",
+    "(spaces) print(x)<br>\n",
+    "#no outcome<br>\n",
+    "\n",
+    "x = 2<br>\n",
+    "print(x)<br>\n",
+    "#print x<br>\n",
+    "\n",
+    "*Python uses an indentation to separate the True and False ‘blocks’*"
    ]
   },
   {
@@ -42,7 +93,7 @@
    "id": "93135ad4-6908-42f5-9651-64d294fb9f77",
    "metadata": {},
    "source": [
-    "#### import package: <br>\n",
+    "#### import package: \n",
     "import more function which python is limited<br>\n",
     "ex. numpy, math"
    ]
@@ -60,17 +111,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e933446-f71c-48bf-bdd6-07ed5a611ff1",
+   "id": "32e3764d-22a8-4166-b774-2b7608c1d369",
    "metadata": {},
    "source": [
-    "#### The space is important\n",
-    "x = 2<br>\n",
-    " print(x)<br>\n",
-    "#no outcome<br>\n",
-    "\n",
-    "x = 2<br>\n",
-    "print(x)<br>\n",
-    "#print x<br>\n"
+    "#### English and variable\n",
+    "we can assign value to variable, variable is something can hold values\n",
+    "English is something wrote between ' ' or \" \"<br>\n",
+    "*print(age)       # Print the value of the variable age <br>\n",
+    "print(\"age\")     # Print the English word 'age'*\n"
    ]
   },
   {
@@ -84,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "dc5d1141-7ef7-4509-86c2-12dedf288a35",
    "metadata": {},
    "outputs": [
@@ -92,14 +140,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 4 4.69041575982343\n"
+      "3 4 5\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "x, y = 3, 4\n",
-    "z = np.sqrt(x*2 + y**2)\n",
+    "z = np.sqrt(x**2 + y**2)\n",
+    "z = int(z)\n",
     "print(x, y, z)"
    ]
   },
@@ -132,17 +181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "101e248c-6b0f-4ac0-a5de-c7641497c656",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.0"
+       "float"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,17 +202,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "272b56d0-5816-462e-8a28-d93dab8d600f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "int"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,17 +223,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "id": "22ab4fcf-874b-4c73-b853-215c9f0dcbd8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "int"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
