READY FOR REVIEW resolved_fundamental_good

--- a/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(good)_exercises.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "24110b71-01b9-40e2-8ac5-9337c2029ade",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,9 @@
      "text": [
       "Apple        $0.99 \n",
       "Banana       $0.59 \n",
-      "Orange       $1.29 \n"
+      "Orange       $1.29 \n",
+      "\n",
+      "********** $*****\n"
      ]
     }
    ],
@@ -152,12 +154,13 @@
     "Cp = '$1.29'\n",
     "print(f'{A:<10}',' ',f'{Ap:<6}') \n",
     "print(f'{B:<10}',' ',f'{Bp:<6}') \n",
-    "print(f'{C:<10}',' ',f'{Cp:<6}') "
+    "print(f'{C:<10}',' ',f'{Cp:<6}\\n') \n",
+    "print('********** $*****')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 28,
    "id": "bd24939c-cb0b-4135-8e13-b7324caf0e3b",
    "metadata": {},
    "outputs": [
@@ -165,42 +168,34 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter the student's score: 1243\n"
+      "Enter the student's score: 31`\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please input a valid integer\n"
+      "please input a valid integer between 0 and 100\n"
      ]
     }
    ],
    "source": [
     "input_ = input('Enter the student\\'s score:')\n",
-    "i = 0\n",
-    "for char in input_:\n",
-    "    if char.isalpha():\n",
-    "        i = i + 1\n",
     "\n",
-    "if (i==0):\n",
+    "if input_.isdigit():\n",
     "    input_ = int(input_)\n",
-    "    if type(input_)==int:\n",
-    "        if input_ <= 100 and input_>=70:\n",
-    "            print('The student\\'s letter grade is: A')\n",
-    "        elif input_ <= 69 and input_>=50:\n",
-    "            print('The student\\'s letter grade is: B')\n",
-    "        elif input_ <= 49 and input_>=35:\n",
-    "            print('The student\\'s letter grade is: C')\n",
-    "        elif input_ <= 34 and input_>=0:\n",
-    "            print('The student\\'s letter grade is: Fail')\n",
-    "        else:\n",
-    "            print('please input a valid integer between 0 and 100')       \n",
+    "    if input_ <= 100 and input_>=70:\n",
+    "        print('The student\\'s letter grade is: A')\n",
+    "    elif input_ <= 69 and input_>=50:\n",
+    "        print('The student\\'s letter grade is: B')\n",
+    "    elif input_ <= 49 and input_>=35:\n",
+    "        print('The student\\'s letter grade is: C')\n",
+    "    elif input_ <= 34 and input_>=0:\n",
+    "        print('The student\\'s letter grade is: Fail')\n",
+    "    else:\n",
+    "        print('please input a valid integer between 0 and 100')       \n",
     "else:\n",
-    "    print('please input a valid integer between 0 and 100')\n",
-    "\n",
-    "\n",
-    "#The student's letter grade is: A"
+    "    print('please input a valid integer between 0 and 100')\n"
    ]
   },
   {
