READY TO REVIEW resolved_storing_data_need

--- a/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(need)_exercises.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "df787ea1-9c94-4a9e-a5b2-16eb3052761d",
    "metadata": {},
    "outputs": [
@@ -55,6 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Boron\n",
       "Boron\n"
      ]
     }
@@ -66,6 +67,7 @@
     "            'Nitrogen', 'Oxygen',\n",
     "            'Fluorine',\n",
     "            'Neon']\n",
+    "print(elements[4])\n",
     "print(elements[-6])"
    ]
   },
