READY FOR REVIEW resolved_storing_data_good

--- a/3.2_storing_data__exercises/storing_data_(good)_exercises.ipynb
+++ b/3.2_storing_data__exercises/storing_data_(good)_exercises.ipynb
@@ -16,10 +16,10 @@
    "source": [
     "|Term|Brief description|\n",
     "|:---|:---|\n",
-    "|Sudsetting|Subsetting means to ‘select’.|\n",
+    "|Subsetting|Subsetting means to ‘select’. *Select specific parts of data, usually based on conditions or indices. It can be done by slicing, indexing, or masking.*|\n",
     "|Indexing|Indexing refers to selecting one element.|\n",
-    "|Slicing|Slicing refers to selecting a range of elements.|\n",
-    "|Masking|Masking is using Boolean array to select element from another array.|"
+    "|Slicing|Slicing refers to selecting a range of elements *by indicate where to start and end*. *The syntax is `array[start:stop:step]`*。|\n",
+    "|Masking|Masking is using Boolean array to select element from another array.*Can be used for subsetting. Subsetting by masking only works with NumPy array!!*|"
    ]
   },
   {
