READY TO REVIEW resolved_loops_good

--- a/4.2_loops__exercises/loops_(good)_exercises.ipynb
+++ b/4.2_loops__exercises/loops_(good)_exercises.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "id": "86ea06e1-c4a4-4865-8a7a-04dcadc8015e",
    "metadata": {},
    "outputs": [
@@ -19,18 +19,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "978 ns ± 4.78 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "1.86 μs ± 42.9 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
     "#using list as result to avoid printing \n",
-    "list = []\n",
+    "list1 = []\n",
     "for i in range(10):\n",
     "    if i%2 == 0:\n",
     "        continue\n",
-    "    list.append(i**2)"
+    "    list1.append(i**2)"
    ]
   },
   {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "id": "0151c6e4-a7dd-45f9-8612-14c551c43b3c",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
    ],
    "source": [
     "sample = 100\n",
-    "\n",
+    "n = 0\n",
     "while sample >= 100/2:\n",
     "    sample = sample*0.95\n",
     "    n = n + 1\n",
