READY TO REVIEW function_good

--- a/5.2_functions__exercises/functions_(good)_exercises.ipynb
+++ b/5.2_functions__exercises/functions_(good)_exercises.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "fd4b85fe-5c6d-4c58-b475-7c73fc45b858",
    "metadata": {},
    "outputs": [
@@ -19,7 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "70\n",
+      "68\n",
       "293\n"
      ]
     }
@@ -28,10 +28,10 @@
     "def convert_celsius(temperature_celsius,scale = 'Fahrenheit'):\n",
     "    n = temperature_celsius\n",
     "    if scale == 'Fahrenheit':\n",
-    "        n = 2 * n + 30\n",
+    "        n = n*9/5 + 32\n",
     "    elif scale == 'Kelvin':\n",
     "        n = n + 273\n",
-    "    return n\n",
+    "    return int(n)\n",
     "\n",
     "print(convert_celsius(20, scale = 'Fahrenheit'))\n",
     "print(convert_celsius(20, scale = 'Kelvin'))"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "38cf40a9-927a-47f9-86cc-c73d7dd52cb1",
    "metadata": {},
    "outputs": [
@@ -47,8 +47,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20.0\n",
-      "293.0\n"
+      "21\n",
+      "294\n"
      ]
     }
    ],
@@ -56,10 +56,10 @@
     "def convert_fahrenheit(temperature_fahrenheit,scale = 'Celsius'):\n",
     "    n = temperature_fahrenheit\n",
     "    if scale == 'Celsius':\n",
-    "        n = (n - 30)/2\n",
+    "        n = (n - 32)*5/9\n",
     "    elif scale == 'Kelvin':\n",
-    "        n = (n - 30)/2 + 273\n",
-    "    return n\n",
+    "        n = (n - 32)*5/9 + 273\n",
+    "    return int(n)\n",
     "\n",
     "print(convert_fahrenheit(70, ))\n",
     "print(convert_fahrenheit(70, scale = 'Kelvin'))"
@@ -67,17 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "2f7cbabf-ea25-4cb4-8fe9-24b8db8ad391",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "293"
+       "-253"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,10 +88,10 @@
     "    if scale == 'Celsius':\n",
     "        n = n - 273\n",
     "    elif scale == 'Fahrenheit':\n",
-    "        n = 2 * (n - 273) + 30\n",
-    "    return n\n",
+    "        n = (n - 273)*9/5 + 32\n",
+    "    return int(n)\n",
     "\n",
-    "convert_kelvins(20,'Celsius')"
+    "convert_kelvin(20,'Celsius')"
    ]
   },
   {
